tests/cmp/dc-label-empty.golden
Parse Error:
tests/cmp/dc-label-empty.trp:1:27 unexpected token TokenDCLabelRight
